<resources>
    <string name="app_name">Sign Up Pages</string>
    <string name="sign_up_to_see_photos_and_videos_from_your_friends">Sign up to see photos and videos from your friends.</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="mobile_number_or_email">Mobile Number or Email</string>
    <string name="learn_more">People who use our service may have uploaded your contact information to Instagram. Learn More</string>
    <string name="privacy_cookies">By signing up, you agree to our Terms, Privacy Policy and Cookies Policy .</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="you_can_use_letters_numbers_amp_periods"><![CDATA[You can use letters, numbers & periods]]></string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
    <string name="people_who_use_our_service_learn_more">People who use our service may have uploaded your contact information to \nFacebook. Learn more.</string>
    <string name="by_clicking">By clicking Sign Up, you agree to our Terms, Privacy Policy and Cookies Policy.\nYou may receive SMS notifications from us and can opt out at any time.</string>
</resources>